# SiMM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  build_docker.sh  configure.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: publish.yml  test.yml
cmake/: sict-config.cmake  sict-shared.cmake  sict-static.cmake
docs/: admin_tool.md  architecture.md  deploy_guide.md  faq.md  observability_fuctionality.md  production_limits.md
docs/design/: admin-server-design.md  cluster-integration-test-design.md
include/simm/: README  simm_common.h  simm_kv.h
include/version/: version.h.in
k8s/simm/: Chart.yaml  values.yaml
k8s/simm/templates/: cluster-manager.yaml  data-server.yaml
python/: CMakeLists.txt  pyproject.toml  setup.py  setup.py.in  version.py.in
python/simm/kv/: __init__.py  ext.cpp
python/simm/tests/: test_kv.py
scripts/: deploy_data_servers.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  clnt_common.cc  clnt_flags.cc  clnt_kv.cc  clnt_mempool.cc  clnt_mempool.h  clnt_messenger.cc  clnt_messenger.h
src/cluster_manager/: CMakeLists.txt  cm_flags.cc  cm_hb_monitor.cc  cm_hb_monitor.h  cm_main.cc  cm_node_manager.cc  cm_node_manager.h  cm_rpc_handler.cc  cm_rpc_handler.h  cm_service.cc  cm_service.h  cm_shard_manager.cc  cm_shard_manager.h
src/common/: CMakeLists.txt
src/common/admin/: CMakeLists.txt  admin_msg_types.h  admin_server.cc  admin_server.h
src/common/base/: assert.h  common_types.h  consts.h  hash.h  memory.h
src/common/context/: context.h
src/common/errcode/: CMakeLists.txt  errcode_def.h
src/common/flags/: CMakeLists.txt  common_flags.cpp
src/common/hashkit/: CMakeLists.txt  hashkit.cc  hashkit.h  murmurhash.cc  murmurhash.h
src/common/logging/: CMakeLists.txt  logging.cc  logging.h
src/common/metrics/: CMakeLists.txt  README.md  metrics.cc  metrics.h
src/common/rpc_handlers/: CMakeLists.txt  common_rpc_handlers.cc  common_rpc_handlers.h
src/common/trace/: CMakeLists.txt  README.md  analyzer.cc  analyzer.h  main.cc  trace.cc  trace.h  trace_flags.cc  trace_handle.h  trace_server.cc  trace_server.h  trace_shm.cc  trace_shm.h  visualize.py
src/common/utils/: CMakeLists.txt  file_util.cc  file_util.h  ip_util.cc  ip_util.h  json.hpp  k8s_util.cc  k8s_util.h  string_util.cc  string_util.h  sys_util.cc  sys_util.h  tabulate.hpp  time_util.cc  time_util.h
src/common/version/: CMakeLists.txt  version_info.h
src/data_server/: CMakeLists.txt  ds_common.h  ds_flags.cc  ds_memory_allocator.cc  ds_memory_allocator.h  kv_cache_evictor.cc  kv_cache_evictor.h  kv_cache_pool.cc  kv_cache_pool.h  kv_hash_table.cc  kv_hash_table.h  kv_object_pool.cc  kv_object_pool.h  kv_rpc_handler.cc  kv_rpc_handler.h  kv_rpc_service.cc  kv_rpc_service.h  kv_server_main.cc
src/proto/: CMakeLists.txt  cm_clnt_rpcs.proto  common.proto  ds_clnt_rpcs.proto  ds_cm_rpcs.proto
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_clnt_kv.cc  test_clnt_mempool.cc  test_clnt_messenger.cc
tests/cluster_integration/: conftest.py  requirements.txt
tests/cluster_integration/framework/: admin_client.py  cluster.py  cluster_observer.py  config.py  process_manager.py  scenario_runner.py
tests/cluster_integration/scenarios/clusters/: medium.yaml
tests/cluster_integration/scenarios/faults/: kill_one_ds.yaml  kill_two_ds.yaml
tests/cluster_integration/scenarios/full/: cm_restart_ds_rejoin.yaml  deferred_reshard_window_timeout.yaml  kill_ds_and_verify_rebalance.yaml
tests/cluster_integration/scenarios/overrides/: fast_heartbeat.yaml
tests/cluster_integration/tests/: test_cm_restart.py  test_deferred_reshard.py  test_failure_detection.py  test_flag_management.py  test_heartbeat.py  test_network_partition.py  test_node_join.py  test_node_rejoin.py  test_rebalance.py
tests/cluster_manager/: CMakeLists.txt  test_cm_deferred_reshard.cc  test_cm_hb_monitor.cc  test_cm_node_manager.cc  test_cm_rebalance.cc  test_cm_service.cc  test_cm_shard_manager.cc
tests/common/: CMakeLists.txt
tests/common/admin/: CMakeLists.txt  test_admin_server.cc
tests/common/base/: CMakeLists.txt  test_common_hash_func.cc
tests/common/common_flags/: test_common_flags.cc
tests/common/errcode/: CMakeLists.txt  test_common_errcode_def.cc
tests/common/rpc_handlers/: CMakeLists.txt  test_common_rpc_handlers.cc
tests/common/utils/: CMakeLists.txt  test_common_k8s_util.cc
tests/correctness/: CMakeLists.txt  test_correctness_minimal.cc  test_correctness_single_raw.cc
tests/data_server/: CMakeLists.txt  test_ds_kv_pool.cc  test_ds_kv_service.cc
tests/protocol_test/: conftest.py  pytest.ini
tests/protocol_test/framework/: admin_client.py  cluster.py  cluster_observer.py  config.py  fault_injector.py  log_parser.py  port_allocator.py  process_manager.py  scenario_runner.py  ssh_executor.py
tests/protocol_test/framework/tests/: test_admin_client.py  test_config.py  test_log_parser.py  test_port_allocator.py  test_scenario_runner.py
tests/protocol_test/scenarios/clusters/: multi_machine.yaml  small.yaml
tests/protocol_test/scenarios/faults/: freeze_ds.yaml  kill_cm.yaml
tests/protocol_test/tests/: test_cm_restart.py  test_deferred_reshard.py  test_failure_detection.py  test_flag_management.py  test_graceful_shutdown.py  test_heartbeat.py  test_multi_failure.py  test_node_join.py  test_node_rejoin.py  test_rebalance.py  test_scenario.py
tests/tools/: CMakeLists.txt  test_simm_stable_test_utils.cc
tools/: CMakeLists.txt  README  simm_analyse_metrics.py  simm_ctl_admin.cc  simm_flags_admin.cc  simm_kvio_bench.cc  simm_kvio_bench_v2.cc  simm_stable_test.cc  simm_stable_test_upgrade.md  simm_stable_test_utils.h
